--- a/f22.markdown
+++ b/f22.markdown
@@ -6,9 +6,9 @@ permalink: /f22
 
 <!-- # ZKP -->
 
-# CS294-XXX/CS194-XXX Zero Knowledge Proofs
+# CS294-XXX Zero Knowledge Proofs
 
-- To sign up for the course, please fill in this [form] (https://www.google.com).
+- To sign up for the course, please fill in this [form](https://www.google.com).
 
 ## Instructors
 
@@ -16,10 +16,10 @@ permalink: /f22
   <thead>
     <tr>
       <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Dawn Song"></th>
-      <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpeg" alt="Shafi Goldwasser"></th>
+      <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Shafi Goldwasser"></th>
       <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Dan Boneh"></th>
-      <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpeg" alt="Yupeng Zhang"></th>
-      <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpeg" alt="Justin Thaler"></th>
+      <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Yupeng Zhang"></th>
+      <th style="width: 40%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Justin Thaler"></th>
     </tr>
   </thead>
   <tbody>
@@ -40,99 +40,32 @@ permalink: /f22
   </tbody>
 </table>
 
-## TAs
+## Course Description
+TBD
 
+## TAs
 TBD
 
 ## Class Time
-Synchronous lecture: 4:00 PM-5:59 PM PT Tue, starting Sep 6. 
-
-<!-- ## Office Hour
-All times are in PST. There will be no office hours until the week of September 6th.
-
-| Dawn Song (Professor) | 05:00pm-05:30pm Wed | [Zoom link]() (ID: , Passcode: ) |
-| Xiaoyuan Liu (TA/GSI) | 12:30pm-01:30pm Thu | [Zoom link]() | -->
+TBD
 
 ## Enrollment
-
-For graduate students, please register for CS294-224; for undergraduate students, please register for CS194-224.
-
-This is a variable unit course. The requirements for each number of units are listed below.
-
-- **1 unit**: attend lectures (graded on participation only)
-- **2 units**: attend lectures + complete a class project with a product definition and a pitch deck
-- **3 units**: attend lectures + complete a class project that includes product definition, a pitch deck, product mockup, and customer conversations
-- **4 units**: attend lectures + complete a class project that includes product definition, a pitch deck, customer conversations, and a prototype product demo
+TBD
 
 ## Syllabus
 
 | Date             | Topic                                                                     | Speaker                    |
 | ---------------- | ------------------------------------------------------------------------- | -------------------------- |
-| Sep 6<br>Lec 1   | Orientation & Entrepreneurship 101 [[Video](https://www.youtube.com/watch?v=JnPaeIc9DAg)] [[Slide](https://web3-startups.org/assets/lectures_slides/lecture1.pdf)] | Dawn Song & Haseeb Qureshi |
-| Sep 13<br>Lec 2  | Web3 landscape (I): L1/L2 / infrastructure, DeFi, CeFi, Service providers[[Video](https://www.youtube.com/watch?v=YWo2zM-0SDI)] | Dan Robinson               |
-| Sep 20<br>Lec 3  | Web3 landscape (II): NFTs, GameFi [[Video](https://www.youtube.com/watch?v=0Bl_sOw3eJ0)] [[Slide](https://web3-startups.org/assets/lectures_slides/lecture3.pdf)] | Yat Siu                    |
-| Sep 27<br>Lec 4  | How to find a good idea [[Video](https://www.youtube.com/watch?v=NNIdGAg3e5Q&list=PLS01nW3Rtgor3EijYdpEHOQi1sZ6m5gos&index=5)] [[Slide](https://web3-startups.org/assets/lectures_slides/lecture4.pdf)] | Haseeb Qureshi             |
-| Oct 4<br>Lec 5   | Web3 landscape (III): DAOs, Decentralized web & future applications       | Balaji Srinivasan          |
-| Oct 11<br>Lec 6  | Pitching [[Slide](https://web3-startups.org/assets/lectures_slides/lecture6.pdf)] | Haseeb Qureshi             |
-| Oct 18<br>Lec 7  | Pitching workshop                                                         |                            |
-| Oct 25<br>Lec 8  | Product                                                                   | Avichal Garg               |
-| Nov 1<br>Lec 9   | [CESC](https://cesc.io) (no lecture)                                      |                            |
-| Nov 8<br>Lec 10  | Legal / Regulatory                                                        | Jake Chervinsky            |
-| Nov 15<br>Lec 11 | Incentive Design & Tokenomics                                             | Tim Roughgarden            |
-| Nov 22<br>Lec 12 | Community & Growth                                                        | Stani Kulechov             |
-| Nov 29<br>Lec 13 | Final project presentation \| Demo day \| Words of wisdom; Closing        | Dawn Song & Haseeb Qureshi |
+| Sep 6<br>Lec 1   | TBD|TBD|
 
 ## Assignment Timeline
 
-| Assignment                | Deadline |
-| Group formation           | Sep 15   |
-| Project proposal          | Oct 9    |
-| Project milestone         | Oct 29   |
-| 1-Unit article            | Nov 28   |
-| Final presentation / Demo | Nov 29   |
+TBD
 
 ## Grading
 
-The class has an attendance requirement. In addition, 2, 3, and 4-unit students will participate in a group project (4-5 students per group; other group size needs to petition for exception), getting hands-on experience in developing web3 entrepreneurship ideas and defining new web3 products. 
-
-|                                        | 1 unit | 2 units | 3 units                                                     | 4 units                                                             |
-|----------------------------------------|--------|---------|-------------------------------------------------------------|---------------------------------------------------------------------|
-| Participation                          | 100%   | 10%     | 10%                                                         | 10%                                                                 |
-| Project proposal                       |        | 20%     | 20%                                                         | 20%                                                                 |
-| Project milestone                      |        | 30%     | 25%                                                         | 25%                                                                 |
-| Final presentation / Demo / whitepaper |        | 40%     | 45% (including customer conversations and a product mockup) | 45% (including customer conversations and a prototype product demo) |
+TBD
 
 ### Participation
 
-The class will be in hybrid format. We expect in-person or online attendance and require each student to ask at least 4 questions to speakers in class over the course of the semester. If you have a time conflict with another class or another reason you cannot attend, please fill out [this form](https://forms.gle/12pqPUUnkDaMFE5g7) to request an exception.
-
-**Students taking 1 unit** should also write an article (at least 2 pages) about the relevant topic covered in this course or your experience of the course posted online, and optionally tweet about the article. The article should be finished by Nov 28.
-For example, a blog article on:
-- Summarizing information and lessons learned from certain lectures
-- A note on the learning experience
-
-The quality of the article needs to be at least 6 marks and the criteria are shown below:
-- Understanding (2 marks): Displays breadth and/or depth of understanding of the topic
-- Importance (2 marks): Content conveys an important aspect of Web3 to the audience
-- Clarity (3 marks): Explains complex concepts simply, clearly, and accurately
-- References (1 mark): Cite the relevant lecture and reference materials such as research papers properly.
-
-### Group Project 
-
-Students will be completing an open-ended web3 product design at the end of the semester. Students are welcome to choose their own topics, but we’ll also provide a list of topic suggestions that you can take inspiration from if you wish. Groups of less than 4 students require extra permission from the course staff. Students need to group with others taking the same number of units. 
-
-## Meet the Guest Speakers
-
-<iframe id="speakers" src="./f22_speakers" width="100%" height="1750" frameborder=0> </iframe>
-
-## Meet the Mentors
-
-<iframe id="mentors" src="./f22_mentors" width="100%" height="960" frameborder=0> </iframe>
-
-## Course Description
-
-Attention on web3 has exploded in recent years. Web3 provides better incentive models and control to users over the networks they use, through powerful abstractions like smart contracts, NFTs, and DAOs. Replacing centralized platforms in web2 with open protocols and autonomous governance, web3 encourages community participation and has the potential to be the future of the Internet.
-
-Web3 has not only pushed forward cutting-edge research topics, but has also attracted great attention from capital markets. According to metrics reported by Forbes, "VCs deployed $30B+ globally in 2021 into crypto startups. " and "There are 65+ crypto unicorns, with over 40 of them created in 2021. There were close to 50 crypto startups that raised over $100M in 2021."
-
-With any technology breakthrough comes great opportunities for entrepreneurship. Our goal in this course is to help students understand the new space of Web3 and learn the fundamentals of entrepreneurship in web3. Through the exposure to successful entrepreneurs, venture capitalists, as well as an overview of open challenges in the industry, we hope to equip students to understand the challenges and opportunities of building a startup in web3 and get hands-on experience through the course.
+TBD
