--- a/f22.markdown
+++ b/f22.markdown
@@ -7,8 +7,8 @@ permalink: /f22
 <!-- # ZKP -->
 
 # CS294 Zero Knowledge Proofs
-
-- To sign up for the course, please fill in this [form](https://www.google.com).
+- Zoom link (TBD)
+- To sign up for the course, please fill in this [form](https://forms.gle/zHA3M7nyFNdXNKXu7).
 
 ## Instructors
 
@@ -16,10 +16,10 @@ permalink: /f22
   <thead>
     <tr>
       <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Dawn Song"></th>
-      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Shafi Goldwasser"></th>
-      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Dan Boneh"></th>
-      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Yupeng Zhang"></th>
-      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/dawn-berkeley.jpg" alt="Justin Thaler"></th>
+      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/goldwasser.jpeg" alt="Shafi Goldwasser"></th>
+      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/Boneh.jpeg" alt="Dan Boneh"></th>
+      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/yupeng.jpeg" alt="Yupeng Zhang"></th>
+      <th style="width: 20%;"><img style="object-fit:cover" width=150 height=200 src="{{site.baseurl}}/assets/thaler.png" alt="Justin Thaler"></th>
     </tr>
   </thead>
   <tbody>
