--- a/f22.markdown
+++ b/f22.markdown
@@ -4,7 +4,7 @@ title: "Zero Knowledge Proofs"
 permalink: /f22
 ---
 
-<!-- # CS294 Zero Knowledge Proofs -->
+# CS294 Zero Knowledge Proofs
 - Zoom link (TBD)
 <!-- - To sign up for the course, please fill in this [form](https://docs.google.com/forms/d/e/1FAIpQLSepJTYKc9iJycBsnywFCo9PLIq1SjbSsWIBlqfWAZGPXHrk3Q/viewform). -->
 
