--- a/f22.markdown
+++ b/f22.markdown
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Zero Knowledge Proofs"
-permalink: /f22-draft
+permalink: /f22
 ---
 
 # CS294/194-238 Zero Knowledge Proofs
