--- a/s23.markdown
+++ b/s23.markdown
@@ -206,6 +206,7 @@ If you need a permission code to join the course, please fill out this [form](ht
   </tr>
 </table>
 
+
 ## Course Description
 This class aims to bring together students and experts in academia and industry to explore Zero-Knowledge Proofs (ZKP). ZKP is a classical cryptographic primitive that ensures the validity of data and computations without sacrificing their confidentiality. It was proposed in the seminal paper by Goldwasser-Micali-Rackoff in 1985. Long considered wildly impractical, ZKPs have seen enormous efficiency improvements over the last decade. This has unlocked entirely new paradigms in the design of distributed and trustless systems, making ZKP one of the most important technologies to the future of blockchains. ZKPs are already being used to build privacy-preserving cryptocurrencies and to improve scalability via zkRollups and zkEVMs, and they stand poised to transform society’s mechanisms for establishing trust and privacy in the coming years and decades.
 
@@ -216,6 +217,18 @@ This course covers fundamental techniques to build ZKP protocols, tools to imple
 - We will cover the design of several current efficient ZKP systems. We will discuss the key ideas in the constructions of these ZKP schemes. ZKP schemes can be based on various different cryptographic techniques and the course will elaborate on their advantages and disadvantages in terms of efficiency, trust model and assumptions. 
 - To help students with developing ZKP systems and applications, we will provide tutorials on the front-end compilers to write ZKP statements. Students can write the computations using such higher-level programming languages, and compile them to low-level representations and run the ZKP protocols using these tools.
 - Finally, we will cover applications of ZKP, including (1) privacy-preserving cryptocurrencies and computations such as Zcash and Zexe; (2) zkRollup and zkEVM that improve the scalability of blockchain; (3) zkBridge to build a secure foundation for multi-chain interoperability; (4) other applications in machine learning, program analysis, and network traffic analysis.
+
+### Assignment Timeline
+
+| Assignment            | Released  | Deadline
+| :-- | :-- | :--
+| Group formation      | 01/23     | 02/06
+| Project proposal    | 02/07     | 02/27
+| Lab               | 02/28     | 03/13
+| Project milestone     | 03/21     | 03/26
+| HW     | 04/04     | 04/17
+| Project presentation  | 04/18     | 05/01
+| Project final report  | 05/02    | 05/12
 
 <!-- ## Assignment Timeline
 
