--- a/s23.markdown
+++ b/s23.markdown
@@ -11,7 +11,7 @@ redirect_from:
 <!-- - Zoom link (TBD) -->
 <!-- - To sign up for the course, please fill in this [form](https://docs.google.com/forms/d/e/1FAIpQLSepJTYKc9iJycBsnywFCo9PLIq1SjbSsWIBlqfWAZGPXHrk3Q/viewform). -->
 
-- [Zoom link](https://berkeley.zoom.us/j/96029091565?pwd=ZlIxMTgvbDF6MHJTK1NQSGs2Q3FxQT09): [ <img src="./assets/meetings.png" alt="link" width="30" style="vertical-align: middle"/> ](https://berkeley.zoom.us/j/96029091565?pwd=ZlIxMTgvbDF6MHJTK1NQSGs2Q3FxQT09) (Password: 826181)
+- [Zoom link](https://berkeley.zoom.us/j/96029091565?pwd=ZlIxMTgvbDF6MHJTK1NQSGs2Q3FxQT09): [ <img src="./assets/meetings.png" alt="link" width="30" style="vertical-align: middle"/> ](https://berkeley.zoom.us/j/96029091565?pwd=ZlIxMTgvbDF6MHJTK1NQSGs2Q3FxQT09) (Password: 826181) [[Add to your calendar](https://calendar.google.com/calendar/embed?src=c_9a6c323b6f09f1f218fc89634a55572426f81c480877866ad1688540e2771c5b%40group.calendar.google.com&ctz=America%2FLos_Angeles)]
 - For general course content related questions, please join our [edstem](https://edstem.org/us/courses/34475/discussion/) and [discord](https://discord.gg/erXuFSxJ).
 - <span style="color: red;"><b>Do not email the course staff or TAs. For private matters, post a private question on edstem and make sure it is visible to all teaching staff.</b></span>
 
@@ -44,7 +44,7 @@ redirect_from:
 * **Readers**: Elden Ren, Vikhyath Mondreti
 
 ## Class Time
-* Synchronous lectures: **5:00 PM-6:59 PM PT Tue in Soda 306**, starting Jan 17 [[Add to your calendar](https://calendar.google.com/calendar/embed?src=c_9a6c323b6f09f1f218fc89634a55572426f81c480877866ad1688540e2771c5b%40group.calendar.google.com&ctz=America%2FLos_Angeles)]
+* Synchronous lectures: **5:00 PM-6:59 PM PT Tue in Soda 306**, starting Jan 17.
 * Asynchronous lectures: links to pre-recorded videos will be posted on the course website.
 
 ## Enrollment
