--- a/s23.markdown
+++ b/s23.markdown
@@ -72,7 +72,7 @@ If you need a permission code to join the course, please fill out this [form](ht
       </tr>
       <tr>
          <td>01/17</td>
-         <td>Introduction and History of ZKP</td>
+         <td> <a href = "https://www.youtube.com/watch?v=uchjTIlPzFo"> Introduction and History of ZKP </a> </td>
       </tr>
       <tr>
          <td>01/24</td>
