--- a/s23.markdown
+++ b/s23.markdown
@@ -73,6 +73,7 @@ If you need a permission code to join the course, please fill out this [form](ht
           <a href = "https://www.youtube.com/watch?v=uchjTIlPzFo"> Lecture </a>
           <br>
           <br>
+          <b> Readings </b>
           <ul>
             <li><a href= "https://people.csail.mit.edu/silvio/Selected%20Scientific%20Papers/Proof%20Systems/The_Knowledge_Complexity_Of_Interactive_Proof_Systems.pdf">[Goldwasser-Micali-Rackoff’89] Knowledge Complexity of Interactive Proof Systems</a></li>
             <li><a href= "https://link.springer.com/chapter/10.1007/3-540-47721-7_11">[Goldreich-Micali-Wigderson’86] How to prove all NP-statements in zero-knowledge, and a methodology of cryptographic protocol design</a></li>
