--- a/s23.markdown
+++ b/s23.markdown
@@ -40,7 +40,7 @@ redirect_from:
 </table>
 
 ## Course Staff
-* **TAs**: Deevashwer Rathee (Head TA), Guru Vamsi Policharla
+* **TAs**: Deevashwer Rathee (Head TA)
 * **Readers**: Elden Ren, Vikhyath Mondreti
 
 ## Class Time
