--- a/s23.markdown
+++ b/s23.markdown
@@ -96,6 +96,7 @@ If you need a permission code to join the course, please fill out this [form](ht
          <td>01/24</td>
          <td>Overview of Modern SNARK Constructions | 
         <a href = "https://youtube.com/playlist?list=PLS01nW3Rtgoo_0Y-X5bQ32SyDbMiGFqee"> Lecture </a>
+        | <a href="{{site.baseurl}}/assets/Lecture2-2023.pdf"> Slides </a>
         </td>
       </tr>
       <tr>
