--- a/s23.markdown
+++ b/s23.markdown
@@ -73,7 +73,7 @@ If you need a permission code to join the course, please fill out this [form](ht
           <a href = "https://www.youtube.com/watch?v=uchjTIlPzFo"> Lecture </a>
           | <a href ="https://forms.gle/CnjXgBkFmYM5PevL6"> Quiz </a>
           | <a href="{{site.baseurl}}/assets/Lecture1-2023-slides.pdf"> Slides </a>
-          | <a href="{{site.baseurl}}/assets/disc1.pdf"> Notes </a>
+          | <a href="{{site.baseurl}}/assets/Disc1.pdf"> Notes </a>
           <br>
           <br>
           <b> Readings </b>
