--- a/s23.markdown
+++ b/s23.markdown
@@ -99,6 +99,15 @@ If you need a permission code to join the course, please fill out this [form](ht
         | <a href = "https://youtube.com/playlist?list=PLS01nW3Rtgoo_0Y-X5bQ32SyDbMiGFqee"> Lecture </a>
         | <a href ="https://forms.gle/jyRJmNttcd2knFXz9"> Quiz </a>
         | <a href="{{site.baseurl}}/assets/Lecture2-2023.pdf"> Slides </a>
+         <br> 
+         <br> 
+         <b> Readings </b>
+          <ul>
+            <li><a href= "https://www.cs.ubc.ca/~nickhar/W12/Lecture9Notes.pdf">Schwartz-Zippel Lemma - Section 1</a></li>
+            <li><a href= "https://www.di.ens.fr/~nitulesc/files/Survey-SNARKs.pdf">Anca Nitulescu - zk-SNARKs: A Gentle Introduction</a></li>
+            <li><a href= "https://medium.com/@boneh/using-zk-proofs-to-fight-disinformation-17e7d57fe52f">Using ZK Proofs to Fight Disinformation</a></li>
+            <li><a href= "https://a16zcrypto.com/zero-knowledge-canon">Zero Knowledge canon</a></li>
+          </ul>
         </td>
       </tr>
       <tr>
